# Transformer

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh
.github/workflows/: cmake-multi-platform.yml
src/: CMakeLists.txt  main.cpp  main.h  utils.cpp  utils.h
src/matrix/: CMakeLists.txt  matrix.cpp  matrix.h
src/module/: CMakeLists.txt  attention.cpp  attention.h  feedforward.cpp  feedforward.h
test/: CMakeLists.txt
test/src/: attention_test.cpp  matrix_test.cpp
